[package]
name = "tree-fs"
version = "0.3.0"
edition = "2021"
description = "Provides a convenient way to create a tree of files"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>", "Iohann Rabeson"]
keywords = ["filesystem", "folders", "test", "assert"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
rand = { version = "0.8.5" }

[dev-dependencies]
